tests/ui/resolve/resolve-hint-macro.stderr
error: expected identifier, found `1`
  --> $DIR/resolve-hint-macro.rs:5:17
   |
LL |     assert_eq { 1, 1 };
   |     ---------   ^ expected identifier
   |     |
   |     while parsing this struct

error: expected identifier, found `1`
  --> $DIR/resolve-hint-macro.rs:5:20
   |
LL |     assert_eq { 1, 1 };
   |     ---------      ^ expected identifier
   |     |
   |     while parsing this struct

error[E0574]: cannot find struct, variant or union type `assert_eq` in this scope
  --> $DIR/resolve-hint-macro.rs:5:5
   |
LL |     assert_eq { 1, 1 };
   |     ^^^^^^^^^ not found in this scope
   |
   = note: a macro named `assert_eq` exists in another namespace
help: use `!` to invoke the macro
   |
LL |     assert_eq! { 1, 1 };
   |              +

error[E0423]: cannot find value `assert` in this scope
  --> $DIR/resolve-hint-macro.rs:9:5
   |
LL |     assert[true];
   |     ^^^^^^ not found in this scope
   |
   = note: a macro named `assert` exists in another namespace
help: use `!` to invoke the macro
   |
LL |     assert![true];
   |           +

error[E0423]: cannot find function `assert_eq` in this scope
  --> $DIR/resolve-hint-macro.rs:3:5
   |
LL |     assert_eq(1, 1);
   |     ^^^^^^^^^ not found in this scope
   |
   = note: a macro named `assert_eq` exists in another namespace
help: use `!` to invoke the macro
   |
LL |     assert_eq!(1, 1);
   |              +

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0423, E0574.
For more information about an error, try `rustc --explain E0423`.
